# big-data-anomaly-detection

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
anomaly_mle/: __init__.py  config.py  main.py
anomaly_mle/data/: loader.py
anomaly_mle/infrastructure/: logging.py
anomaly_mle/ml/: model.py  pipeline.py  predictor.py
anomaly_mle/tests/: test_data_loader.py  test_model.py  test_pipeline.py  test_predictor.py
anomaly_mle/utils/: get_session_spark.py  results.py  transformer_map.py
artifacts/: pipeline.jsonc
shape_mle/: __init__.py  main.py
shape_mle/data/: loader.py
shape_mle/domain/: entities.py
shape_mle/infrastructure/: logging.py
shape_mle/ml/: model.py  pipeline.py  predictor.py
shape_mle/tests/: test_data_loader.py  test_model.py  test_pipeline.py  test_predictor.py
shape_mle/utils/: get_session_spark.py  results.py
