[tool.poetry]
name = "shape-mle-challenge"
version = "0.1.0"
description = "Machine Learning Engineer Challenge for Shape"
authors = ["Guilherme Albuquerque <guilherme.hlalbuquerque@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
scikit-learn = "1.6.1"
pandas = "^2.2.3"
numpy = "^2.2.3"
ruff = "^0.9.7"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 